
=== New features in 1.19 ===
* (bug 19838) Possibility to get all interwiki prefixes if the interwiki
  cache is used.
* $wgDnsBlacklistUrls now accepts an array with url and key as the
  elements to work with DNSBLs that require keys, such as
  Project Honeypot.
* (bug 30022) Add support for custom loadScript sources to ResourceLoader.

=== Bug fixes in 1.19 ===
* $wgUploadNavigationUrl should be used for file redlinks if
  $wgUploadMissingFileUrl is not set. The first was used for this
  until the second was introduced in 1.17.
* (bug 25355) Parser generates edit section links for special pages

=== API changes in 1.19 ===
* (bug 19838) siprop=interwikimap can now use the interwiki cache.
* (bug 29748) Add API search prefix support
* (bug 29684) Set forgotten parameter types in ApiQueryIWLinks
* (bug 29685) do not output NULL parentid with
  list=deletedrevs&drprop=parentid

=== Languages updated in 1.19 ===

MediaWiki supports over 330 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of Bugzilla reports.


=== Other changes in 1.19 ===

== Compatibility ==

MediaWiki 1.19 requires PHP 5.2.3. PHP 4 is no longer supported.

MySQL is the recommended DBMS. PostgreSQL or SQLite can also be used, but
support for them is somewhat less mature. There is experimental support for IBM
DB2 and Microsoft SQL Server.

The supported versions are:

* MySQL 4.0 or later
* PostgreSQL 8.3 or later
* SQLite 3
* Oracle 9.0.1 or later

== Upgrading ==

1.19 has several database changes since 1.18, and will not work without schema
updates.

If upgrading from before 1.11, and you are using a wiki as a commons
repository, make sure that it is updated as well. Otherwise, errors may arise
due to database schema changes.

If upgrading from before 1.7, you may want to run refreshLinks.php to ensure
new database fields are filled with data.
